--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,4 +13,9 @@
     </ul>
     <%= render 'reviews/reviews', reviews: @reviews %>
   </div>
+  <div class="col-sm-7 offset-sm-5 bottom-text ">
+    <% if current_user == @user %>
+    <%= link_to "退会する",  user_path(current_user), method: :delete, data: { confirm: "本当に退会しますか?" }, class: 'btn btn-danger btn-sm' %>
+    <% end %>
+  </div>
 </div>
