--- a/app/views/reviews/_reviews.html.erb
+++ b/app/views/reviews/_reviews.html.erb
@@ -33,7 +33,7 @@
          <% if current_user.favoriting?(review) %>
            <%= form_with(model: current_user.favorites.find_by(review_id: review.id), local: true, method: :delete) do |f| %>
              <%= hidden_field_tag :review_id, review.id %>
-             <%= f.submit 'お気に入りを削除', class: 'btn btn-warning btn-sm' %>
+             <%= f.submit 'お気に入りを削除', class: 'btn btn-warning btn-sm' %> お気に入り数  <%= review.favorites.count %>
            <% end %>
          <% else %>
           <%= form_with(model: current_user.favorites.build, local: true) do |f| %>
