--- a/app/views/reviews/_reviews.html.erb
+++ b/app/views/reviews/_reviews.html.erb
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-md-4">       
             <tr>
-              <td>レビュー-<%= simple_format(review.content) %></td>
+              <td>レビュー<%= simple_format(review.content) %></td>
             </tr>
           </div>
         </div>
